--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
   <body>
+    <!-- <script src="@/firebase/init.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
     <noscript>
       <strong>We're sorry but ns-js doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
